--- a/book.toml
+++ b/book.toml
@@ -9,7 +9,7 @@ title = "ABCs of Programming"
 edition = "2018"
 
 [build]
-create-missing = true
+create-missing = false
 
 [output.html]
 additional-css = ['src/css/custom.css']
