--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Get master
+      uses: actions/checkout@v2
+    - name: Get github-pages
+      uses: actions/checkout@v2
       with:
         ref: github-pages
     - name: Merge Master
