--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         ref: github-pages
     - name: Merge Master
-      run: git fetch origin master && git pull master
+      run: git fetch origin master && git pull origin/master
 
     - name: Setup mdBook
       uses: peaceiris/actions-mdbook@v1
