--- a/book.toml
+++ b/book.toml
@@ -13,3 +13,6 @@ create-missing = false
 
 [output.html]
 additional-css = ['src/css/custom.css']
+no-section-label = true
+git-repository-url = 'https://github.com/ABCsOf/ABCs-of-Programming'
+
